/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.14.3/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'java'
    id 'jacoco'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    maven { url "https://repo.osgeo.org/repository/release/" }
    maven { url "https://repo1.maven.org/maven2" }
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Mockito for testing
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'

    // This dependency is used by the application.
    implementation libs.guava

    // Weather API dependency
    implementation 'com.google.code.gson:gson:2.10.1'

    //this dependency is used of the CSV reader method
    implementation 'com.opencsv:opencsv:5.12.0'

    //this dependency is used for establishing the database connection
    implementation 'org.xerial:sqlite-jdbc:3.50.3.0'

    implementation 'org.controlsfx:controlsfx:11.2.2'

    //Cucumber for acceptance testing
    // https://mvnrepository.com/artifact/io.cucumber/cucumber-junit-platform-engine
    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.5.0'

    // https://mvnrepository.com/artifact/io.cucumber/cucumber-java
    testImplementation 'io.cucumber:cucumber-java:7.5.0'

    // https://mvnrepository.com/artifact/io.cucumber/cucumber-junit
    testImplementation "io.cucumber:cucumber-junit:7.5.0"

    // https://mvnrepository.com/artifact/org.junit.platform/junit-platform-suite
    testImplementation 'org.junit.platform:junit-platform-suite:1.8.2'

    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'

    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'

    // https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.2'

    // https://mvnrepository.com/artifact/org.assertj/assertj-core
    testImplementation 'org.assertj:assertj-core:3.23.1'

    // GeoTools - Updated dependencies with proper exclusions
    implementation ('org.geotools:gt-main:29.1') {
        exclude group: 'javax.media', module: 'jai_core'
        exclude group: 'javax.media', module: 'jai_codec'
        exclude group: 'javax.media', module: 'jai_imageio'
    }
    implementation ('org.geotools:gt-shapefile:29.1') {
        exclude group: 'javax.media', module: 'jai_core'
        exclude group: 'javax.media', module: 'jai_codec'
        exclude group: 'javax.media', module: 'jai_imageio'
    }
    implementation ('org.geotools:gt-referencing:29.1') {
        exclude group: 'javax.media', module: 'jai_core'
        exclude group: 'javax.media', module: 'jai_codec'
        exclude group: 'javax.media', module: 'jai_imageio'
    }
    implementation ('org.geotools:gt-epsg-hsql:29.1') {
        exclude group: 'javax.media', module: 'jai_core'
        exclude group: 'javax.media', module: 'jai_codec'
        exclude group: 'javax.media', module: 'jai_imageio'
    }
    implementation ('org.geotools:gt-cql:29.1') {
        exclude group: 'javax.media', module: 'jai_core'
        exclude group: 'javax.media', module: 'jai_codec'
        exclude group: 'javax.media', module: 'jai_imageio'
    }

    // https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    // this dependency is used for converting Trail objects into JSON for the map
    implementation 'com.google.code.gson:gson:2.10.1'

    // dotenv for environment variable management
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'


}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'seng202.team5.App'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

javafx {
    version = "21.0.2"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    archiveBaseName = 'yompyomp'
    manifest {
        attributes 'Main-Class': 'seng202.team5.App'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    exclude 'META-INF/*.MF'
}

run {
    // Add the internal JavaFX API to the module path
    jvmArgs = ['--module-path', classpath.asPath, '--add-exports', 'javafx.web/com.sun.javafx.webkit=ALL-UNNAMED']
}

jacoco {
    toolVersion = "0.8.13"
}

test {
    finalizedBy jacocoTestReport
}

tasks.register("cucumber", Test) {
    group = "verification"

    useJUnitPlatform()

    filter {
        includeTestsMatching "seng202.team5.cucumber.*"
    }

    testLogging {
        events "failed"
        exceptionFormat "full"
    }

    finalizedBy jacocoTestReport
}

tasks.named("check") {
    dependsOn test, cucumber

    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                'seng202/team5/gui/**',
                'seng202/team5/gui/components/**',
                'seng202/team5/models/**',
                'seng202/team5/App.class',
                'seng202/team5/exceptions/**'
            ])
        }))
    }
}

javadoc {
    options.encoding = 'UTF-8'
    options.addStringOption('Xdoclint:none', '-quiet')
    options.addBooleanOption('html5', true)
}